corrected text-align syntax

--- a/foundations/intro-to-css/01-css-methods/style.css
+++ b/foundations/intro-to-css/01-css-methods/style.css
@@ -1,11 +1,6 @@
-<!--
-* `div`: a red background, white text, a font size of 32px, center aligned, and bold
-* `p`: a green background, white text, and a font size of 18px
-* `button`: an orange background and a font size of 18px
--->
 div {
 	background-color: red;
 	font-size: 32px;
 	color: white;
-	text-align: center
+	text-align: center;
 }
